--- a/cs-src/TsmTest/TsmTest.csproj
+++ b/cs-src/TsmTest/TsmTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tsm\Tsm.csproj" />
+  </ItemGroup>
+
 </Project>
